<resources>

    <string name="name">Name</string>
    <string name="be_hero">Be Hero</string>
    <string name="location">Location</string>

    <string name="splash_screen_text">Dear To Donate</string>
    <string name="logo_title_full_text">Dare To Donate</string>
    <string name="logo_title_part1">Dare</string>
    <string name="logo_title_part2">Donate</string>
    <string name="register_title_full_text">Don’t have an account? Register Now.</string>
    <string name="register_title_clickable_text">Register Now</string>
    <string name="login_title_full_text">Already have an account? Log In.</string>
    <string name="login_title_clickable_text">Log In</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="select_location_text">Select Current Position</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="name_hint_text">Name</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="phone_hint_text">Phone</string>
    <string name="description_hint_text">Description</string>
    <string name="patient_name_hint_Tex">Patient Name</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="birthday_hint_text">Select your birthday</string>
    <string name="address_hint_text">Select your address</string>
    <string name="required_filed_text">Please fill in all the required fields</string>
    <string name="not_verified_mail_text">We\'ve sent email to %1$s to verify your email address and active your account.</string>
    <string name="send_mail_clickable_text">Click here</string>
    <string name="send_mail_full_text">Click here if you did not receive the email verification mail.</string>
    <string name="sent_mail_text">A verification link has been sent to your email account</string>
    <string name="sent_reset_password_text">Enter your email address and we\'ll email you instructions on how to reset your password</string>
    <string name="sent_password_text">An email has been sent your rescue email address. Follow the directions in the email to reset your password.</string>
    <string name="donation_created_request_text">Your donation request created successfully.</string>
    <string name="donation_updated_request_text">Your donation request updated successfully.</string>
    <string name="blood_type">Blood Type</string>
    <string name="requested">Requested</string>
    <string name="patient">Patient</string>
    <string name="hospital">Hospital</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="no_records">No Records</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="search_hint">Search</string>
    <string name="account_activation">An email has been sent to your email address containing an activation link. Please click on the link to activate your account.</string>
    <string name="update_information">Successfully updated your personal information</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="are_you_sure_delete_donation">Are you sure you want to delete this donation?</string>
    <string name="donors">Donor\'s</string>


    <!-- Button Text-->
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Register</string>
    <string name="update_button_text">Update</string>
    <string name="send_button_text">Send</string>
    <string name="pick_button_text">Pick</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="call_now">Call Now</string>
    <string name="request">Request</string>
    <string name="apply_button_text">Apply</string>
    <string name="search_button_text">Search</string>





    <!-- Action Bar Title-->
    <string name="profile_title">Profile</string>
    <string name="profile_edit_title">Profile Edit</string>
    <string name="mine_request_title">My Request</string>
    <string name="create_a_request_title">Create A Request</string>
    <string name="update_request_title">Update Request</string>
    <string name="find_donation_title">Find Donation</string>
    <string name="donation_detail_title">Donation Detail</string>
    <string name="find_donor_title">Find Donor</string>
    <string name="find_donor_detail_title">Donor Detail</string>

    <string-array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Non</item>
    </string-array>

</resources>