<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:background="@drawable/custom_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="24dp"
        android:text="@string/sent_reset_password_text"
        android:textAlignment="center"
        android:textColor="@color/dark_gry"
        android:textSize="14sp" />

    <com.keremturker.behero.commons.CustomEdittext
        android:id="@+id/edtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:hint="@string/email_hint_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/viewMiddle"
        app:leftImage="@drawable/ic_mail" />

    <Button
        android:id="@+id/btnSendMail"
        style="@style/Button.Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="24dp"
        android:text="@string/send_button_text"
        android:textAlignment="center"
        android:textSize="20sp" />


</LinearLayout>